--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,25 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         
-
-        <!-- Open Graph / Facebook -->
-        <meta property="og:site_name" content="JakubSarm.eu">
-        <meta property="og:title" content="Jakub Šarm - Programátor">
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="Programátor webů a webových aplikací.">
-        <meta property="og:image" content="https://jakubsarm.eu/assets/favicon.png">
-        <meta pperty="og:image:secure_url" content="https://jakubsarm.eu/assets/favicon.png""/>
-        <meta property="og:image:type" content="image/png">
-        <meta property="og:image:width" content="500">
-        <meta property="og:image:height" content="500">
-        <meta property="og:url" content="https://jakubsarm.eu">
-        <meta property="twitter:card" content="summary_large_image">
-
-        <!-- Twitter -->
         
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="JakubSarm.eu" />
-        <meta property="og:title" content="Jakub Šarm - Programátor" />
-        <meta property="og:type" content="website" />
+        <meta name="description"    content="Programátor webů a webových aplikací." />
+        <meta name="twitter:card"   content="summary" />
+        <meta name="twitter:site"   content="@JakubSarm.eu" />
+        <meta property="og:title"   content="Jakub Šarm - Programátor" />
+        <meta property="og:type"    content="website" />
+        <meta property="og:image"   content="https://jakubsarm.eu/assets/favicon.png" />
+        <meta property="og:image:secure_url" content="https://jakubsarm.eu/assets/favicon.png" />
+        <meta property="og:image:type"      content="image/png" />
+        <meta property="og:image:width"     content="500" />
+        <meta property="og:image:height"    content="500" />
+        <meta property="og:image:alt"       content="Programátor webů a webových aplikací." />
+        <meta name="og:description"         content="Programátor webů a webových aplikací." />
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="shortcut icon"       href="favicon.ico" />
+        <link rel="apple-touch-icon"    href="/assets/favicon.png" />
+        <meta name="theme-color"        content="#c3473c" />
+        <link rel="canonical"           href="https://jakubsarm.eu" />
 
         <meta name="title" content="Jakub Šarm - Programátor">
         <meta name="description" content="Programátor webů a webových aplikací.">
