--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         <meta name="description"    content="Programátor webů a webových aplikací." />
         <meta name="twitter:card"   content="summary" />
         <meta name="twitter:site"   content="@JakubSarm.eu" />
+        <meta property="og:site_name" content="JakubSarm.eu">
         <meta property="og:title"   content="Jakub Šarm - Programátor" />
         <meta property="og:type"    content="website" />
         <meta property="og:image"   content="https://jakubsarm.eu/assets/favicon.png" />
