--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="cz">
     <head>
         <meta charset="utf-8">
-        <title>JakubSarm.eu - Programátor</title>
+        <title>Jakub Šarm - Programátor</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
