--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
         <meta name="author" content="Jakub Šarm">
         <meta name="author:website" content="https://JakubSarm.eu/">
 
+        <!-- WEB 4 UKRAJINE - STOP Russian military aggression against Ukraine! -->
+        <script async src="https://js.web4ukraine.org/"></script>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         
