Upravená optimalizace pro načítání

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+        
+        <meta http-equiv="Cache-control" content="public">
 
         <meta name="author" content="Jakub Šarm">
         <meta name="author:website" content="https://JakubSarm.eu/">
@@ -39,7 +41,7 @@
 
         <meta name="title" content="Jakub Šarm - Programátor">
         <meta name="description" content="Programátor webů a webových aplikací.">
-        <meta name="keywords" content="jakub, sarm, šarm, programátor, php, html, css, weby, stranky">
+        <meta name="keywords" content="šarm, jakub, jakub šarm, freelancer programator, freelancer, programtor, web programator">
 
         <meta name="Googlebot" content="follow">
         <meta name="SeznamBot" content="index">
@@ -66,7 +68,16 @@
 
     </head>
     <body>
-        <jakubsarm-app></jakubsarm-app>
+        <jakubsarm-app>
+            <div class="container" style="height: 100vh;">
+                <div class="row justify-content-center align-items-center" style="height: 100vh;">
+                    <div class="col-md-12 text-center">
+                        <h1 class="display-2">JakubSarm.eu</h1>
+                        <h3>Načítání aplikace...</h3>
+                    </div>
+                </div>
+            </div>
+        </jakubsarm-app>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
