--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
         <meta name="author" content="Jakub Šarm">
         <meta name="author:website" content="https://JakubSarm.eu/">
+        <link rel="preload">
 
         <!-- WEB 4 UKRAJINE - STOP Russian military aggression against Ukraine! -->
         <script async src="https://js.web4ukraine.org/"></script>
